--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
-/* .class{
-    justify-content: center;
-} */
+ .custom-btn{
+    background-color: red;
+    padding: 3px 3px;
+    border-radius: 50%;
+    color: white;
+ }
